SpagoBIQbeEngine's Change Log


======================= Release 2.3.0 2009-15-10 =======================

New features

[...]


Bug fixes

[...]


Changes in template structure

[...]


