@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
+
+<!-- ================================================================================= -->
+<!-- QBE BASE PRESENTATIONS															   -->
+<!-- ================================================================================= -->
+
 <PRESENTATION>	
-	<MAPPING business_type="ACTION" business_name="PUBLISH_ACTION" publisher_name="DYNAMIC_FORWARD_PUBLISHER"/>
+	
+	<MAPPING business_type="ACTION" 
+			 business_name="PUBLISH_ACTION" 
+			 publisher_name="DYNAMIC_FORWARD_PUBLISHER"/>
 	
 	 
-	<MAPPING business_type="ACTION" business_name="ENGINE_STARTUP_EXCEPTION_ACTION" publisher_name="ENGINE_STARTUP_EXCEPTION_ACTION_PUBLISHER"/>		
+	<MAPPING business_type="ACTION" 
+			 business_name="ENGINE_STARTUP_EXCEPTION_TRAP_ACTION" 
+			 publisher_name="ENGINE_STARTUP_EXCEPTION_TRAP_ACTION_PUBLISHER"/>		
 	
 </PRESENTATION>
