@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
+
+<!-- ================================================================================= -->
+<!-- QBE BASE PUBLISHERS															   -->
+<!-- ================================================================================= -->
 <PUBLISHERS>
 
 	<PUBLISHER name="DYNAMIC_FORWARD_PUBLISHER">
@@ -7,21 +11,13 @@
 				<ITEM prog="0" resource="it.eng.spago.presentation.DynamicForwardPublisher" />
 			</RESOURCES>
 		</RENDERING>
-		
-		<RENDERING channel="PORTLET" mode="" type="JAVA">
-      		<RESOURCES>
-        		<ITEM mode="VIEW" resource="it.eng.spago.presentation.DynamicForwardPublisher" />
-        		
-      		</RESOURCES>
-    	</RENDERING>
 	</PUBLISHER>  	
-
+ 	
   	
-  	
-  	<PUBLISHER name="ENGINE_STARTUP_EXCEPTION_ACTION_PUBLISHER">
+  	<PUBLISHER name="ENGINE_STARTUP_EXCEPTION_TRAP_ACTION_PUBLISHER">
 		<RENDERING channel="HTTP" type="JSP" mode="FORWARD">
 			<RESOURCES>
-				<ITEM prog="0" resource="/WEB-INF/jsp/engineStartupExceptionPage.jsp" />
+				<ITEM prog="0" resource="/WEB-INF/jsp/errors/serviceError.jsp" />
 			</RESOURCES>
 		</RENDERING>
 	</PUBLISHER>
