@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
+
 <TRAPS>
-	<TRAP trap_type="ACTION" trap_name="SERVICE_EXCEPTION_ACTION" name="serviceError" CATEGORY="serviceError"/>
-	<TRAP trap_type="ACTION" trap_name="ENGINE_STARTUP_EXCEPTION_ACTION" name="startupError" CATEGORY="startupError"/>
-	
+	<TRAP trap_type="ACTION" 
+		  trap_name="SERVICE_EXCEPTION_TRAP_ACTION" 
+		  name="serviceError" CATEGORY="serviceError"/>
+		  
+	<TRAP trap_type="ACTION" 
+	      trap_name="ENGINE_STARTUP_EXCEPTION_TRAP_ACTION" 
+	      name="startupError" CATEGORY="startupError"/>	
 	
 </TRAPS>
