@@ -1,8 +1,34 @@
+<%-- 
+SpagoBI - The Business Intelligence Free Platform
 
+Copyright (C) 2005 Engineering Ingegneria Informatica S.p.A.
+
+This library is free software; you can redistribute it and/or
+modify it under the terms of the GNU Lesser General Public
+License as published by the Free Software Foundation; either
+version 2.1 of the License, or (at your option) any later version.
+
+This library is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+Lesser General Public License for more details.
+
+You should have received a copy of the GNU Lesser General Public
+License along with this library; if not, write to the Free Software
+Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
+--%>
+
+<%-- 
+author: Andrea Gioia (andrea.gioia@eng.it)
+--%>
 <%@ page language="java" 
 	     contentType="text/html; charset=ISO-8859-1" 
 	     pageEncoding="ISO-8859-1"%>	
 
+
+<%-- ---------------------------------------------------------------------- --%>
+<%-- JAVA IMPORTS															--%>
+<%-- ---------------------------------------------------------------------- --%>
 <%@page import="it.eng.spago.configuration.*"%>
 <%@page import="it.eng.spago.base.*"%>
 <%@page import="it.eng.spagobi.engines.qbe.QbeEngineConfig"%>
@@ -17,6 +43,9 @@
 <%@page import="java.util.List"%>
 <%@page import="java.util.Iterator"%>
 
+<%-- ---------------------------------------------------------------------- --%>
+<%-- JAVA CODE 																--%>
+<%-- ---------------------------------------------------------------------- --%>
 <%
 	QbeEngineInstance qbeEngineInstance;
 	UserProfile profile;
@@ -56,6 +85,9 @@
 %>
 
 
+<%-- ---------------------------------------------------------------------- --%>
+<%-- HTML	 																--%>
+<%-- ---------------------------------------------------------------------- --%>
 <html>
 	
 	<head>
@@ -66,7 +98,7 @@
 		<script type="text/javascript">
 		document.domain='<%= EnginConf.getInstance().getSpagoBiDomain() %>';
 		</script>
-		<!-- END SCRIPT FOR DOMAIN DEFINITION --%>
+		<%-- END SCRIPT FOR DOMAIN DEFINITION --%>
 	
 	</head>
 	
