@@ -5,7 +5,16 @@ SpagoBIQbeEngine's Change Log
 
 New features
 
-[...]
+SPAGOBI-261               : Added subqueries management.
+SPAGOBI-262               : Added multi-jar functionality.
+SPAGOBI-265               : Added DISTINCT feature.
+SPAGOBI-266               : Added COUNT feature.
+SPAGOBI-267               : Added the possibility to define promtable filters.
+SPAGOBI-268               : Added validation of query before save. 
+SPAGOBI-269               : Added execution like only modality. Now some users can only execute pre-defined queries (i.e. subobjects). 
+SPAGOBI-295               : Added HAVING feature.
+SPAGOBI-296               : Added analytical driver list panel associated to the Qbe document. Analytcal drivers can be dragged into the operand columns (left or right) of any filter row.
+SPAGOBI-297               : Added JAMON support.
 
 
 Bug fixes
